{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 25,
  "lineage": "9c485599-29dc-9416-dd17-168df5c0cd97",
  "resources": [
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [
                  "cc-web-app-93jna2ju.azurewebsites.net"
                ],
                "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/backendAddressPools/cc-gateway-back-addr-pool",
                "ip_addresses": [],
                "name": "cc-gateway-back-addr-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/backendHttpSettingsCollection/cc-gateway-back-http-settings",
                "name": "cc-gateway-back-http-settings",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 5,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/frontendIPConfigurations/cc-gateway-front-ip-config",
                "name": "cc-gateway-front-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/publicIPAddresses/public_ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/frontendPorts/cc-gateway-front-port",
                "name": "cc-gateway-front-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/gatewayIPConfigurations/cc-gateway-back-ip-config",
                "name": "cc-gateway-back-ip-config",
                "subnet_id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/virtualNetworks/cc_vnet/subnets/gateway_subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/frontendIPConfigurations/cc-gateway-front-ip-config",
                "frontend_ip_configuration_name": "cc-gateway-front-ip-config",
                "frontend_port_id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/frontendPorts/cc-gateway-front-port",
                "frontend_port_name": "cc-gateway-front-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/httpListeners/cc-gateway-http-listener",
                "name": "cc-gateway-http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway",
            "identity": [],
            "location": "francecentral",
            "name": "cc-gateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/backendAddressPools/cc-gateway-back-addr-pool",
                "backend_address_pool_name": "cc-gateway-back-addr-pool",
                "backend_http_settings_id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/backendHttpSettingsCollection/cc-gateway-back-http-settings",
                "backend_http_settings_name": "cc-gateway-back-http-settings",
                "http_listener_id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/httpListeners/cc-gateway-http-listener",
                "http_listener_name": "cc-gateway-http-listener",
                "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/applicationGateways/cc-gateway/requestRoutingRules/cc-gateway-routing-rule",
                "name": "cc-gateway-routing-rule",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "cc_rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_gateway.azurerm_public_ip.public_ip",
            "module.app_service.azurerm_linux_web_app.app_service",
            "module.app_service.azurerm_service_plan.api_plan",
            "module.app_service.random_string.random_name",
            "module.blob_storage.azurerm_storage_account.storage_account",
            "module.blob_storage.azurerm_storage_container.storage_container",
            "module.blob_storage.random_string.random_name",
            "module.postgresql.azurerm_postgresql_flexible_server.postgresql",
            "module.postgresql.azurerm_postgresql_flexible_server_database.database",
            "module.postgresql.azurerm_postgresql_flexible_server_firewall_rule.allow_webapp",
            "module.postgresql.azurerm_private_dns_zone.cpi_dns",
            "module.postgresql.azurerm_private_dns_zone_virtual_network_link.dns_private_link",
            "module.postgresql.random_string.random_name",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_network_security_group.db_nsg",
            "module.vnet.azurerm_network_security_group.webapp_nsg",
            "module.vnet.azurerm_subnet.subnets",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/publicIPAddresses/public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.251.119.242",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "public_ip",
            "resource_group_name": "cc_rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_network_security_group.db_nsg",
            "module.vnet.azurerm_network_security_group.webapp_nsg",
            "module.vnet.azurerm_subnet.subnets",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "francecentral",
            "name": "db-nsg",
            "resource_group_name": "cc_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAppSubnetTraffic",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webapp_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/networkSecurityGroups/webapp-nsg",
            "location": "francecentral",
            "name": "webapp-nsg",
            "resource_group_name": "cc_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowDbSubnetTraffic",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "blob_subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/virtualNetworks/cc_vnet/subnets/blob_subnet",
            "name": "blob_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cc_rg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "cc_vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "gateway_subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/virtualNetworks/cc_vnet/subnets/gateway_subnet",
            "name": "gateway_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cc_rg",
            "virtual_network_name": "cc_vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "storage_subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "storage_delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/virtualNetworks/cc_vnet/subnets/storage_subnet",
            "name": "storage_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cc_rg",
            "virtual_network_name": "cc_vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "web_app_subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "app_delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/virtualNetworks/cc_vnet/subnets/web_app_subnet",
            "name": "web_app_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cc_rg",
            "virtual_network_name": "cc_vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8dda55e8-1d99-42d3-ac5f-1ec2af4be81d",
            "id": "/subscriptions/ecce6efe-e866-4fa6-9ff2-20f9bffc1f3f/resourceGroups/cc_rg/providers/Microsoft.Network/virtualNetworks/cc_vnet",
            "location": "francecentral",
            "name": "cc_vnet",
            "resource_group_name": "cc_rg"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}